// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render material icon 1`] = `
<i
  class="ty-icon material-icons"
>
  face
</i>
`;

exports[`Icon should support iconfont 1`] = `
<i
  class="ty-icon"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    height="1em"
    width="1em"
  >
    <use
      href="#icon-twitter"
    />
  </svg>
</i>
`;

exports[`Icon should support loading 1`] = `
<Icon
  type="loading"
>
  <i
    className="ty-icon"
    style={Object {}}
  >
    <svg
      aria-hidden="true"
      className="ty-icon--spin"
      fill="currentColor"
      height="1em"
      width="1em"
    >
      <use
        xlinkHref="#loading"
      />
    </svg>
  </i>
</Icon>
`;
